--- a/trisha_djorgon_about_page_seo_ready.html
+++ b/trisha_djorgon_about_page_seo_ready.html
@@ -13,14 +13,14 @@
   <meta property="og:title" content="Trisha Djorgon — Calgary HR & Payroll Leader" />
   <meta property="og:description" content="Official profile for Trisha Djorgon, Calgary-based Human Resources & Payroll leader." />
   <meta property="og:url" content="https://www.example.com/trisha-djorgon" />
-  <meta property="og:image" content="https://www.example.com/images/trisha-djorgon-headshot.jpg" />
+  <meta property="og:image" content="https://trisha-djorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg" />
   <meta property="og:image:alt" content="Professional headshot of Trisha Djorgon" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Trisha Djorgon — Calgary HR & Payroll Leader" />
   <meta name="twitter:description" content="Official profile for Trisha Djorgon, Calgary-based Human Resources & Payroll leader." />
-  <meta name="twitter:image" content="https://www.example.com/images/trisha-djorgon-headshot.jpg" />
+  <meta name="twitter:image" content="https://trisha-djorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg" />
 
   <!-- Schema.org Person (JSON‑LD) -->
   <script type="application/ld+json">
@@ -29,7 +29,7 @@
     "@type": "Person",
     "name": "Trisha Djorgon",
     "jobTitle": "Human Resources & Payroll Leader",
-    "image": "https://www.example.com/images/trisha-djorgon-headshot.jpg",
+    "image": "https://trisha-djorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg",
     "url": "https://www.example.com/trisha-djorgon",
     "address": {
       "@type": "PostalAddress",
@@ -102,9 +102,9 @@
         </div>
         <div class="links">
           <!-- Update these to your real profiles -->
-          <a href="https://www.linkedin.com/in/trisha-djorgon" rel="me noopener" target="_blank">LinkedIn</a>
-          <a href="mailto:you@example.com" rel="nofollow">Email</a>
-          <a href="/Trisha-Djorgon-Resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+          <a href="https://www.linkedin.com/in/trisha-djorgon" rel="me noopener" target="_blank">trisha-djorgon</a>
+          <a href="mailto:you@example.com" rel="nofollow"></a>
+          <a href="/Trisha-Djorgon-Resume.pdf" target="_blank" rel="noopener"></a>
         </div>
       </div>
     </header>
@@ -116,7 +116,7 @@
           I’m an HR & Payroll leader based in Calgary, Alberta, focused on building scalable people operations, clean payroll processes, and compliance across Canadian and US jurisdictions. I’ve led onboarding, benefits programs, time & attendance, and policy frameworks while partnering with finance and operations to drive clarity and consistency.
         </p>
         <p>
-          Areas of interest include HR analytics, employee experience, immigration/visa workflows, and process automation. I value clear documentation, repeatable workflows, and practical empathy.
+          Areas of interest include HR analytics, employee experience, professional communication foundations, and process automation. I value clear documentation, repeatable workflows, and practical empathy.
         </p>
       </section>
 
