--- a/trisha_djorgon_about_page_seo_ready.html
+++ b/trisha_djorgon_about_page_seo_ready.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Trisha Djorgon — Calgary HR & Payroll Leader</title>
   <meta name="description" content="Official profile for Trisha Djorgon, Calgary-based Human Resources & Payroll leader. Bio, experience, and contact links." />
-  <link rel="canonical" href="https://www.example.com/trisha-djorgon" />
+  <link rel="canonical" href="https://trishadjorgon.github.io/trisha-djorgon/" />
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
@@ -13,14 +13,14 @@
   <meta property="og:title" content="Trisha Djorgon — Calgary HR & Payroll Leader" />
   <meta property="og:description" content="Official profile for Trisha Djorgon, Calgary-based Human Resources & Payroll leader." />
   <meta property="og:url" content="https://www.example.com/trisha-djorgon" />
-  <meta property="og:image" content="https://trisha-djorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg" />
+  <meta property="og:image" content="https://trishadjorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg" />
   <meta property="og:image:alt" content="Professional headshot of Trisha Djorgon" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Trisha Djorgon — Calgary HR & Payroll Leader" />
   <meta name="twitter:description" content="Official profile for Trisha Djorgon, Calgary-based Human Resources & Payroll leader." />
-  <meta name="twitter:image" content="https://trisha-djorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg" />
+  <meta name="twitter:image" content="https://trishadjorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg" />
 
   <!-- Schema.org Person (JSON‑LD) -->
   <script type="application/ld+json">
@@ -29,7 +29,7 @@
     "@type": "Person",
     "name": "Trisha Djorgon",
     "jobTitle": "Human Resources & Payroll Leader",
-    "image": "https://trisha-djorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg",
+    "image": "https://trishadjorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg",
     "url": "https://www.example.com/trisha-djorgon",
     "address": {
       "@type": "PostalAddress",
@@ -87,7 +87,7 @@
   <div class="wrap">
     <header>
       <!-- Replace src with your hosted image URL -->
-      <img src="https://www.example.com/images/trisha-djorgon-headshot.jpg"
+      <img src="https://trishadjorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg"
            alt="Headshot of Trisha Djorgon, Calgary HR & Payroll Leader"
            width="140" height="140" loading="eager" />
 
