--- a/trisha_djorgon_about_page_seo_ready.html
+++ b/trisha_djorgon_about_page_seo_ready.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="profile" />
   <meta property="og:title" content="Trisha Djorgon — Calgary HR & Payroll Leader" />
   <meta property="og:description" content="Official profile for Trisha Djorgon, Calgary-based Human Resources & Payroll leader." />
-  <meta property="og:url" content="https://www.example.com/trisha-djorgon" />
+  <meta property="og:url" content="https://trishadjorgon.github.io/trisha-djorgon/" />
   <meta property="og:image" content="https://trishadjorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg" />
   <meta property="og:image:alt" content="Professional headshot of Trisha Djorgon" />
 
@@ -30,7 +30,7 @@
     "name": "Trisha Djorgon",
     "jobTitle": "Human Resources & Payroll Leader",
     "image": "https://trishadjorgon.github.io/trisha-djorgon/trisha-djorgon-headshot.jpg",
-    "url": "https://www.example.com/trisha-djorgon",
+    "url": "https://trishadjorgon.github.io/trisha-djorgon/",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Calgary",
@@ -101,11 +101,10 @@
           <span class="badge">Compliance (Canada/US)</span>
         </div>
         <div class="links">
-          <!-- Update these to your real profiles -->
-          <a href="https://www.linkedin.com/in/trisha-djorgon" rel="me noopener" target="_blank">trisha-djorgon</a>
-          <a href="mailto:you@example.com" rel="nofollow"></a>
-          <a href="/Trisha-Djorgon-Resume.pdf" target="_blank" rel="noopener"></a>
-        </div>
+  <a href="https://www.linkedin.com/in/trisha-djorgon" rel="me noopener" target="_blank">LinkedIn</a>
+  <a href="mailto:trisha.djorgon@gmail.com" rel="nofollow">Email</a>
+</div>
+
       </div>
     </header>
 
